integrar Keycloak como servidor de identidad (Resource Server)
Spring Boot:
- SecurityConfig reescrita: oauth2ResourceServer con JWT de Keycloak
  Reglas: /api/admin/** → ADMIN, /api/** → ADMIN|DISTRIBUIDOR, /actuator/** → ADMIN
  CORS actualizado: agrega métodos PUT y DELETE
  @Profile("!local") para excluir del perfil de desarrollo sin Keycloak
- KeycloakRolesConverter: extrae realm_access.roles → ROLE_* de Spring Security
- LocalSecurityConfig: @Profile("local") — permite todas las peticiones sin autenticación
- Eliminados: JwtAuthenticationFilter y JwtService (reemplazados por Resource Server)
- Eliminadas dependencias jjwt-*; agregada spring-boot-starter-oauth2-resource-server

Configuración:
- application.yml: eliminada sección JWT
- application-dev.yml: agrega KEYCLOAK_ISSUER_URI y KEYCLOAK_JWK_SET_URI (defaults localhost:8080)
- application-prod.yml: agrega variables de entorno KEYCLOAK_ISSUER_URI y KEYCLOAK_JWK_SET_URI
- application-local.yml: nuevo perfil para desarrollo sin Keycloak

Infraestructura:
- docker-compose.yml: agrega servicio Keycloak 26.1 con import automático del realm
  Backend depende de Keycloak (service_healthy)
  KC_HOSTNAME=localhost para que el claim iss coincida con la URL pública
  jwk-set-uri usa hostname interno Docker (keycloak:8080)
- keycloak/realm-cartones.json: realm 'cartones' con roles ADMIN/DISTRIBUIDOR,
  cliente frontend (público, PKCE), usuarios demo admin y distribuidor
- .env.example: agrega PORT_KEYCLOAK, KEYCLOAK_ADMIN_USER, KEYCLOAK_ADMIN_PASSWORD