@@ -1,18 +1,17 @@
 package com.eliasgonzalez.cartones.security.config;
 
-import com.eliasgonzalez.cartones.security.filter.JwtAuthenticationFilter;
-import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
 import org.springframework.beans.factory.annotation.Value;
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
+import org.springframework.context.annotation.Profile;
 import org.springframework.security.config.annotation.method.configuration.EnableMethodSecurity;
 import org.springframework.security.config.annotation.web.builders.HttpSecurity;
 import org.springframework.security.config.annotation.web.configuration.EnableWebSecurity;
 import org.springframework.security.config.annotation.web.configurers.AbstractHttpConfigurer;
 import org.springframework.security.config.http.SessionCreationPolicy;
+import org.springframework.security.oauth2.server.resource.authentication.JwtAuthenticationConverter;
 import org.springframework.security.web.SecurityFilterChain;
-import org.springframework.security.web.authentication.UsernamePasswordAuthenticationFilter;
 import org.springframework.web.cors.CorsConfiguration;
 import org.springframework.web.cors.CorsConfigurationSource;
 import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
@@ -21,119 +20,83 @@ import java.util.Arrays;
 import java.util.List;
 
 /**
- * Configuración de Spring Security 6
+ * Configuración de Spring Security — Resource Server con Keycloak.
+ * Activa en todos los perfiles EXCEPTO 'local'.
  *
- * - Arquitectura Stateless (sin sesiones)
- * - Autenticación basada en JWT
- * - Protección de endpoints /api/**
- * - Configuración explícita de CORS
- * - Protección de Actuator (solo acceso autenticado)
+ * - Stateless: sin sesiones HTTP
+ * - Autenticación: tokens JWT emitidos por Keycloak
+ * - Autorización:
+ *     /api/admin/** → rol ADMIN
+ *     /api/**       → rol ADMIN o DISTRIBUIDOR
+ *     /actuator/**  → rol ADMIN (excepto /actuator/health que es público)
  */
 @Configuration
 @EnableWebSecurity
 @EnableMethodSecurity
-@RequiredArgsConstructor
+@Profile("!local")
 @Slf4j
 public class SecurityConfig {
-
-    private final JwtAuthenticationFilter jwtAuthFilter;
 
     @Value("${app.cors.origins}")
     private String corsOrigins;
 
     @Bean
     public SecurityFilterChain securityFilterChain(HttpSecurity http) throws Exception {
-        log.info("Configurando Spring Security con arquitectura Stateless");
+        log.info("Configurando Spring Security como Resource Server (Keycloak)");
 
         http
-                // Deshabilitar CSRF (no necesario en API stateless)
-                .csrf(AbstractHttpConfigurer::disable)
-
-                // Configuración de autorización de peticiones
-                .authorizeHttpRequests(auth -> auth
-                        // Permitir acceso público a Swagger/OpenAPI
-                        .requestMatchers(
-                                "/swagger-ui/**",
-                                "/v3/api-docs/**",
-                                "/swagger-ui.html"
-                        ).permitAll()
-
-                        // Permitir acceso público a health check (para monitoreo externo)
-                        .requestMatchers("/actuator/health", "/actuator/health/**").permitAll()
-
-                        // Proteger otros endpoints de Actuator (requieren autenticación)
-                        .requestMatchers("/actuator/**").authenticated()
-
-                        // Proteger todos los endpoints de la API
-                        .requestMatchers("/api/**").authenticated()
-
-                        // Cualquier otra petición debe denegar acceso por defecto
-                        .anyRequest().denyAll()
-                )
-
-                // Configuración de gestión de sesiones: STATELESS
-                .sessionManagement(session -> session
-                        .sessionCreationPolicy(SessionCreationPolicy.STATELESS)
-                )
-
-                // Configuración de CORS
-                .cors(cors -> cors.configurationSource(corsConfigurationSource()))
-
-                // Añadir el filtro JWT antes del filtro de autenticación de Spring
-                .addFilterBefore(jwtAuthFilter, UsernamePasswordAuthenticationFilter.class);
+            .csrf(AbstractHttpConfigurer::disable)
+            .sessionManagement(session -> session
+                .sessionCreationPolicy(SessionCreationPolicy.STATELESS)
+            )
+            .cors(cors -> cors.configurationSource(corsConfigurationSource()))
+            .authorizeHttpRequests(auth -> auth
+                .requestMatchers(
+                    "/swagger-ui/**",
+                    "/v3/api-docs/**",
+                    "/swagger-ui.html"
+                ).permitAll()
+                .requestMatchers("/actuator/health", "/actuator/health/**").permitAll()
+                .requestMatchers("/api/admin/**").hasRole("ADMIN")
+                .requestMatchers("/actuator/**").hasRole("ADMIN")
+                .requestMatchers("/api/**").hasAnyRole("ADMIN", "DISTRIBUIDOR")
+                .anyRequest().denyAll()
+            )
+            .oauth2ResourceServer(oauth2 -> oauth2
+                .jwt(jwt -> jwt.jwtAuthenticationConverter(jwtAuthenticationConverter()))
+            );
 
         return http.build();
     }
 
-    /**
-     * Configuración de CORS (Cross-Origin Resource Sharing)
-     * Lee los orígenes permitidos desde la variable de entorno APP_CORS_ORIGINS
-     */
+    @Bean
+    public JwtAuthenticationConverter jwtAuthenticationConverter() {
+        JwtAuthenticationConverter converter = new JwtAuthenticationConverter();
+        converter.setJwtGrantedAuthoritiesConverter(new KeycloakRolesConverter());
+        return converter;
+    }
+
     @Bean
     public CorsConfigurationSource corsConfigurationSource() {
         log.info("Configurando CORS con orígenes: {}", corsOrigins);
 
         CorsConfiguration configuration = new CorsConfiguration();
 
-        // Parsear los orígenes permitidos (separados por coma)
         List<String> allowedOrigins = Arrays.stream(corsOrigins.split(","))
-                .map(String::trim)
-                .toList();
+            .map(String::trim)
+            .toList();
 
         configuration.setAllowedOrigins(allowedOrigins);
-
-        // Métodos HTTP permitidos
-        configuration.setAllowedMethods(Arrays.asList(
-                "GET",
-                "POST",
-                "OPTIONS"
-        ));
-
-        // Headers permitidos
+        configuration.setAllowedMethods(Arrays.asList("GET", "POST", "PUT", "DELETE", "OPTIONS"));
         configuration.setAllowedHeaders(Arrays.asList(
-                "Authorization",
-                "Content-Type",
-                "Accept",
-                "X-Requested-With",
-                "X-API-KEY"
+            "Authorization", "Content-Type", "Accept", "X-Requested-With"
         ));
-
-        // Exponer headers en la respuesta (útil para tokens en headers)
-        configuration.setExposedHeaders(Arrays.asList(
-                "Authorization",
-                "X-Total-Count"
-        ));
-
-        // Permitir envío de credenciales (cookies, authorization headers)
+        configuration.setExposedHeaders(List.of("Authorization", "X-Total-Count"));
         configuration.setAllowCredentials(true);
-
-        // Tiempo de cacheo de la configuración CORS (1 hora)
         configuration.setMaxAge(3600L);
 
-        // Aplicar la configuración a todos los endpoints
         UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
         source.registerCorsConfiguration("/**", configuration);
-
         return source;
     }
 }
